   memory when there are massive repeated log messages. (LP: #984256)
 * apport-gtk: Do not assume that an icon requested for size 42 actually
   delivers size 42; some themes do not have this available and deliver a
   smaller one instead, causing overflows. Also, copy the image as
   gtk_icon_theme_load_icon() returns a readonly result which we must not
   modify. (LP: #937249)

2.0.1 (2012-04-10)
------------------
Bug fixes:
 * test_ui_gtk.py: Disable package hooks for the tests, as they might ask for
   sudo passwords and other interactive bits, and thus make the tests hang.
 * test_backend_apt_dpkg.py: Fix checks for the installation of -dbgsym
   packages. This should always happen, as the sandboxes have a ddeb apt
   source. Only make it conditional on the system apt sources in the "use
   system config" test.
 * test_report.py: Sleep a bit after calling our test crash script, to ensure
   the kernel has time to finish writing the core file.
 * generic package hook: Also check /tmp for enough space. Thanks Brian Murray.
   (LP: #972933)
 * problem_report.py, write_mime(): Fix regression from version 1.95: Add a
   value as attachment if it is bigger than 1000 bytes, not if it is bigger
   than 100. (LP: #977882)

Improvements:
 * packaging-apt-dpkg.py: Avoid constructing and updating the apt.Cache()
   objects multiple times, to speed up retracing. Thanks Evan Dandrea.
   (LP: #973494)

2.0 (2012-03-30)
----------------
This is the final 2.0 release, featuring the overhauled and simplified GUI,
support for whoopsie-daemon, and client-side duplicate checking.

Bug fixes:
 - report.py, anonymize(): Only replace whole words, not substrings.
   (LP: #966562)
 - apport_python_hook.py: Fix filtering of org.freedesktop.DBus.Error.NoReply
   exceptions. (LP: #958575)
 - crashdb.py: When publishing the crash database, cut hash file names after
   quoting, to avoid that the quoting causes them to become too long.